--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "wrangler pages deploy dist --project-name spottle --branch production",
     "cf:deploy": "wrangler pages deploy dist --project-name spottle --branch production"
   },
   "dependencies": {
