Configure Wrangler assets directory

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,5 +3,8 @@ compatibility_date = "2025-02-03"
 pages_build_output_dir = "./dist"
 custom_domains = ["spottle.shibeprime.com"]
 
+[assets]
+directory = "./dist"
+
 [build]
 command = "npm run build"
