--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 project_name = "spottle"
 custom_domain = "spottle.shibeprime.com"
 build_command = "npm run build"
+deploy_command = "npm run deploy"
 output_dir = "dist"
